objects/Performance_Log__c/Performance_Log__c.object-meta.xml
<CustomObject>
    <label>Performance Log</label>
    <nameField>
        <label>Log Key</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Performance Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>