objects/Performance_Log__c/fields/backend__c.field-meta.xml
<CustomField>
    <fullName>backend__c</fullName>
    <label>backend</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>