objects/Performance_Log__c/fields/client_load_time__c.field-meta.xml
<CustomField>
    <fullName>client_load_time__c</fullName>
    <formula>IF(OR(ISNULL(request__c), ISNULL(client__c), (client__c = 0), (request__c = 0)), -1, client__c -  request__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>client load time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>