objects/Performance_Log__c/fields/client_time__c.field-meta.xml
<CustomField>
    <fullName>client_time__c</fullName>
    <label>client time</label>
    <length>40</length>
    <type>Text</type>
</CustomField>