objects/Performance_Log__c/fields/do_opening__c.field-meta.xml
<CustomField>
    <fullName>do_opening__c</fullName>
    <label>do opening</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>