objects/Performance_Log__c/fields/do_post_call__c.field-meta.xml
<CustomField>
    <fullName>do_post_call__c</fullName>
    <label>do post call</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>