objects/Performance_Log__c/fields/error_long_time__c.field-meta.xml
<CustomField>
    <fullName>error_long_time__c</fullName>
    <label>error_long_time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>