objects/Performance_Log__c/fields/error_time__c.field-meta.xml
<CustomField>
    <fullName>error_time__c</fullName>
    <label>error_time</label>
    <length>40</length>
    <type>Text</type>
</CustomField>