objects/Performance_Log__c/fields/errors__c.field-meta.xml
<CustomField>
    <fullName>errors__c</fullName>
    <label>errors</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>