objects/Performance_Log__c/fields/prepare_session__c.field-meta.xml
<CustomField>
    <fullName>prepare_session__c</fullName>
    <label>prepare session</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>