objects/Performance_Log__c/fields/request__c.field-meta.xml
<CustomField>
    <fullName>request__c</fullName>
    <label>request</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>