objects/Performance_Log__c/fields/request_time__c.field-meta.xml
<CustomField>
    <fullName>request_time__c</fullName>
    <label>request time</label>
    <length>40</length>
    <type>Text</type>
</CustomField>