objects/Performance_Log__c/fields/response__c.field-meta.xml
<CustomField>
    <fullName>response__c</fullName>
    <label>response</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>