objects/Performance_Log__c/fields/response_time__c.field-meta.xml
<CustomField>
    <fullName>response_time__c</fullName>
    <label>response time</label>
    <length>40</length>
    <type>Text</type>
</CustomField>