objects/Performance_Log__c/fields/sorting__c.field-meta.xml
<CustomField>
    <fullName>sorting__c</fullName>
    <formula>RPAD(session_id__c , 50)  + &#39;-&#39; + RPAD(tracking_id__c , 30)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>sorting</label>
    <type>Text</type>
</CustomField>