objects/Performance_Log__c/fields/trace_log_2__c.field-meta.xml
<CustomField>
    <fullName>trace_log_2__c</fullName>
    <label>trace log 2</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>