objects/Performance_Log__c/fields/uri__c.field-meta.xml
<CustomField>
    <fullName>uri__c</fullName>
    <label>uri</label>
    <length>255</length>
    <type>Text</type>
</CustomField>