objects/Performance_Log__c/fields/web_tier_time__c.field-meta.xml
<CustomField>
    <fullName>web_tier_time__c</fullName>
    <formula>IF(OR(ISNULL( request__c ), ISNULL(  response__c ), response__c = 0, request__c = 0 ), -1, response__c - request__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>web tier time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>